# GenAI-training

./: README.md
day-1/abc-restaurant-customer-support/: README.md
day-1/abc-restaurant-customer-support/backend/: chatbot.py  package-lock.json  package.json  server.js
day-1/clinical-trial-assistant/: main.py  rag_service.py  requirements.txt
day-1/math-solver/: .env  COMPLETE.md  DOCUMENTATION.md  EXAMPLES.md  QUICKSTART.md  README.md
day-1/python-code-review-agent/: PROMPTS.md  QUICKREF.md  README.md  SETUP.md
day-1/react-agent/: .gitignore  ARCHITECTURE.md  COMPLETE.md  EXAMPLES.md  INDEX.md  MANIFEST.md  QUICKSTART.md  README.md  SETUP.md  VISUALGUIDE.md
day-2/: Document_Indexing.ipynb  Hybrid_Search.ipynb  Multi_Doc_RAG.ipynb  RAG_QnA.ipynb
day-2/resources/: sample.csv  sample.txt
day-3/: Linear_Workflow_for_Data_Processing.ipynb  links.md
day-3 chatbot/: app.py  generate_graph.py  graph_engine.py  test_chatbot.py  tests.txt  workflow_graph.mermaid
day-3/day-3 chatbot/: chatbot_engine.py  menu_suggestions.txt  rag_knowledge_base.txt
day-3/lab-4/: app.py  requirements.txt  research_pipeline.py
day-4/ATS-Screening project/: .env  app.py  requirements.txt  screenings.txt  utils.py  workflow.py
day-4/Assignment/ai_content_creation_workflow_v2_crewai-project/: README.md  pyproject.toml
day-4/Assignment/ai_content_creation_workflow_v2_crewai-project/src/ai_content_creation_workflow/: crew.py  main.py
day-4/Assignment/ai_content_creation_workflow_v2_crewai-project/src/ai_content_creation_workflow/config/: agents.yaml  tasks.yaml
(+32 files in other folders)
