[project]
name = "ai_content_creation_workflow"
version = "0.1.0"
description = "ai_content_creation_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.13.0",
]

[project.scripts]
ai_content_creation_workflow = "ai_content_creation_workflow.main:run"
run_crew = "ai_content_creation_workflow.main:run"
train = "ai_content_creation_workflow.main:train"
replay = "ai_content_creation_workflow.main:replay"
test = "ai_content_creation_workflow.main:test"
run_with_trigger = "ai_content_creation_workflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
